Adapt nav items padding to fix better on small screen

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -17,7 +17,7 @@ nav a {
   background-color: transparent;
   font-size: 1.6rem;
   line-height: 30px;
-  padding: 0 16px;
+  padding: 0 14px;
   text-decoration: none;
   vertical-align: middle;
   cursor: pointer;
